--- a/package.json
+++ b/package.json
@@ -1,37 +1,40 @@
 {
-  "name": "electron-quick-start",
-  "version": "1.0.0",
-  "description": "A minimal Electron application",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/electron/electron-quick-start.git"
-  },
-  "keywords": [
-    "Electron",
-    "quick",
-    "start",
-    "tutorial"
-  ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
-  "bugs": {
-    "url": "https://github.com/electron/electron-quick-start/issues"
-  },
-  "homepage": "https://github.com/electron/electron-quick-start#readme",
-  "devDependencies": {
-    "electron": "^1.3.4",
-    "should": "^11.1.1",
-    "webtorrent-fixtures": "^1.5.0",
-    "mocha": "^2.1.0"
-  },
-  "dependencies": {
-    "drag-drop": "^2.12.1",
-    "electron": "^1.4.4",
-    "jquery": "^3.1.1",
-    "webtorrent": "^0.97.2"
-  }
+	"name": "electron-quick-start",
+	"version": "1.0.0",
+	"description": "A minimal Electron application",
+	"main": "main.js",
+	"scripts": {
+		"start": "electron .",
+		"beautify": "js-beautify --indent-with-tabs --brace-style collapse -r *.json *.js",
+		"jshint": "jshint *.json *.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/electron/electron-quick-start.git"
+	},
+	"keywords": [
+		"Electron",
+		"quick",
+		"start",
+		"tutorial"
+	],
+	"author": "GitHub",
+	"license": "CC0-1.0",
+	"bugs": {
+		"url": "https://github.com/electron/electron-quick-start/issues"
+	},
+	"homepage": "https://github.com/electron/electron-quick-start#readme",
+	"devDependencies": {
+		"electron": "^1.3.4",
+		"js-beautify": "^1.6.4",
+		"jshint": "^2.9.4",
+		"should": "^11.1.1",
+		"webtorrent-fixtures": "^1.5.0"
+	},
+	"dependencies": {
+		"drag-drop": "^2.12.1",
+		"electron": "^1.4.4",
+		"jquery": "^3.1.1",
+		"webtorrent": "^0.97.2"
+	}
 }
